--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="container">
 	<div class="row">
-		<div class="col col-12">
+		<div class="col col-12 col-t-12 col-m-12 last-item">
 			{% if site.posts.size > 0 %}
 				<h4 class="lates-title">Latest Posts</h4>
 			{% endif %}
